<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Cloud Path</string>
    <string name="forgot"> Forgot Password </string>
    <string name="login"> Login </string>
    <string name="register">Register</string>
    <string name="app_desc"></string>
    <color name="red">#ff0000</color>
	<color name="green">#00ff00</color>
	<color name="blue">#0000ff</color>
	<color name="darkblue">#008</color>
	<color name="black">#ff000000</color>
	<color name="lightblue">#ff3399ff</color>
	
	<style name="title">
    <item name="android:textSize">35sp</item>
    <item name="android:textColor">#008</item>
    </style>
	<string name="iaas">IaaS Overview</string>
	<string name="evaluate">Evaluation</string>
	<string name="mgmt">Management</string>
	<string name="about">About</string>
	<string name="help">Help</string>
	<string name="exit">Exit</string>
	<string name="hello">@raw/hello</string>
	
	  <string name="about_title">About Cloud Path</string>
</resources>
